[package]
name = "mit" # mini_git
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.6"
hex = "0.4.3"
clap = { version = "4.4.11", features = ["derive"] }
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
colored = "2.1.0"
rand = "0.8.5"
color-backtrace = "0.6.1"
once_cell = "1.19.0"
backtrace = "0.3.69"